# OpenPrune

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.human/: prompt.init.md
docs/: verification-example.md
src/openprune/: __init__.py  __main__.py  cli.py  config.py  exclusion.py  paths.py
src/openprune/analysis/: __init__.py  imports.py  noqa.py  scope.py  scoring.py  verification.py  visitor.py
src/openprune/deletion/: __init__.py  batch.py  prompts.py  session.py
src/openprune/detection/: __init__.py  archetype.py  entrypoints.py  infrastructure.py  linting.py
src/openprune/frameworks/: __init__.py  base.py  celery.py  flask.py
src/openprune/models/: __init__.py  archetype.py  deletion.py  dependency.py  results.py  verification.py
src/openprune/output/: __init__.py  json_writer.py  tree.py
src/openprune/plugins/: __init__.py  protocol.py
src/openprune/plugins/builtin/: __init__.py  celery.py  flask.py  flask_restplus.py  pydantic.py  pytest.py  sqlalchemy.py
src/openprune/verification/: __init__.py  batch.py  prompts.py  session.py
tests/: __init__.py  test_exclusion.py  test_ignore_decorators.py  test_import_verification.py  test_imports.py  test_infrastructure.py  test_integration.py  test_output.py  test_plugins.py  test_reachability.py  test_scoring.py  test_sqlalchemy_usage.py  test_verification.py  test_visitor_caller.py
tests/fixtures/flask_app/: Dockerfile  app.py  models.py  run_worker.sh  tasks.py
tests/fixtures/flask_app/utils/: __init__.py  deprecated.py  helpers.py
