[project]
name = "openprune"
version = "0.1.0"
description = "Dead code detection for Python applications with LLM-assisted verification and removal"
authors = [
    {name = "danieltanfh", email = "danieltanfh95@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["dead-code", "static-analysis", "python", "flask", "celery", "ast", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "pathspec>=0.11.0",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
openprune = "openprune.cli:app"

[project.urls]
Homepage = "https://github.com/danieltanfh95/OpenPrune"
Repository = "https://github.com/danieltanfh95/OpenPrune"
Issues = "https://github.com/danieltanfh95/OpenPrune/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/openprune"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.9.5"

